hphp/hack/test/typecheck/dynamic/bad_math.php.exp
File "bad_math.php", line 14, characters 3-5:
Typing error (Typing[4423])
  File "bad_math.php", line 14, characters 3-5:
  Expected `int` because this is used in a bitwise operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 16, characters 3-4:
Typing error (Typing[4423])
  File "bad_math.php", line 16, characters 3-9:
  Expected `int` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 17, characters 3-4:
Typing error (Typing[4423])
  File "bad_math.php", line 17, characters 3-9:
  Expected `int` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 18, characters 3-8:
Typing error (Typing[4423])
  File "bad_math.php", line 18, characters 3-4:
  Expected `int` because this is used in a bitwise operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 19, characters 3-8:
Typing error (Typing[4423])
  File "bad_math.php", line 19, characters 3-4:
  Expected `int` because this is used in a bitwise operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 20, characters 3-8:
Typing error (Typing[4423])
  File "bad_math.php", line 20, characters 3-4:
  Expected `int` because this is used in a bitwise operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 9, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 9, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 9, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 9, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 10, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 10, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 10, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 10, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 11, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 11, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 11, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 11, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 12, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 12, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 12, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 12, characters 3-8:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 13, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 13, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 13, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 13, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 15, characters 3-4:
Typing error (Typing[4429])
  File "bad_math.php", line 15, characters 3-8:
  Expected `int` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 21, characters 3-5:
Typing error (Typing[4429])
  File "bad_math.php", line 21, characters 3-5:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 21, characters 3-5:
Typing error (Typing[4429])
  File "bad_math.php", line 21, characters 3-5:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
File "bad_math.php", line 22, characters 3-5:
Typing error (Typing[4429])
  File "bad_math.php", line 22, characters 3-5:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 19-25:
  But got `dynamic`
File "bad_math.php", line 22, characters 3-5:
Typing error (Typing[4429])
  File "bad_math.php", line 22, characters 3-5:
  Expected `num` because this is used in an arithmetic operation
  File "bad_math.php", line 5, characters 33-33:
  But got `C`
